--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "blueimp-md5": "^2.18.0",
     "core-js": "^3.6.5",
+    "js-cookie": "^2.2.1",
     "vant": "^2.12.7",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
